Fixed z-index for navbar-static-top

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,7 +11,7 @@ p { margin-bottom: 15px; }
 	padding-top: 15px; 
 	padding: 15px 0; 
 } 
-.navbar-static-top { z-index: 0 !important; } 
+.navbar-static-top { z-index: 1 !important; } 
 .navbar-brand { 
 	padding: 0 15px !important; 
 }
